force-app/main/default/objects/echosign_dev1__SIGN_Data_Mapping__c/echosign_dev1__SIGN_Data_Mapping__c.object-meta.xml
<CustomObject>
    <customHelpPage>echosign_dev1__EchosignHelp</customHelpPage>
    <label>Data Mapping</label>
    <nameField>
        <label>Data Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>