force-app/main/default/objects/echosign_dev1__SIGN_Data_Mapping__c/fields/echosign_dev1__Cached_Input_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Cached_Input_Type__c</fullName>
    <label>Cached Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>