force-app/main/default/objects/echosign_dev1__SIGN_Data_Mapping__c/fields/echosign_dev1__Default_Data_Mapping__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Default_Data_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you want this data mapping to run by default for all agreements sent. You can override the default if you specify a different data mapping to use with a specific agreement or agreement template.</description>
    <inlineHelpText>Check this box if you want this data mapping to run by default for all agreements sent. You can override the default if you specify a different data mapping to use with a specific agreement or agreement template.</inlineHelpText>
    <label>Default Data Mapping?</label>
    <type>Checkbox</type>
</CustomField>