force-app/main/default/objects/echosign_dev1__SIGN_Data_Mapping__c/fields/echosign_dev1__Description__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>