force-app/main/default/objects/echosign_dev1__SIGN_Data_Mapping__c/fields/echosign_dev1__Notify_User_of_Errors__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Notify_User_of_Errors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify User of Errors</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Process_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>