force-app/main/default/objects/echosign_dev1__SIGN_Data_Mapping__c/listViews/echosign_dev1__All.listView-meta.xml
<ListView>
    <fullName>echosign_dev1__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>